Make the sort_by_word_value checkbox checked by default.

--- a/create.html
+++ b/create.html
@@ -193,7 +193,7 @@ function do_create()
 
 <label id="label_show_word_value"><input checked="checked" type="checkbox" id="show_word_value" title="show word value" onchange="do_create()" onclick="toggle_element_style_display('label_sort_by_word_value')">show word value</label>
 
-<label id="label_sort_by_word_value"><input type="checkbox" id="sort_by_word_value" title="sort by word value" onchange="do_create()">sort by word value</label>
+<label id="label_sort_by_word_value"><input checked="checked" type="checkbox" id="sort_by_word_value" title="sort by word value" onchange="do_create()">sort by word value</label>
 
 <br />
 
