Removed the "maxlength" attribute.

--- a/create.html
+++ b/create.html
@@ -185,9 +185,11 @@ function do_create()
 
 <div>
 
-<input autocomplete="off" maxlength="12" pattern="[A-Za-z]+" placeholder="letters" size="12" type="text" id="letters" title="letters" />
+<!-- maxlength="12" -->
+<input autocomplete="off" pattern="[A-Za-z]+" placeholder="letters" size="12" type="text" id="letters" title="letters" />
 
-<input autocomplete="off" maxlength="16" placeholder="bonus string" size="9" type="text" id="bonus_string" title="bonus string" />
+<!-- maxlength="16" -->
+<input autocomplete="off" placeholder="bonus string" size="9" type="text" id="bonus_string" title="bonus string" />
 
 <br />
 
