--- a/solve.html
+++ b/solve.html
@@ -31,7 +31,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <script type="application/javascript" src="words.js"></script>
 
-<script type="application/javascript" src="utils.js"></script>
+<script type="application/javascript" src="utils.javascript"></script>
 
 <script type="application/javascript">
 
