--- a/create.html
+++ b/create.html
@@ -13,7 +13,7 @@
 <!--
 <script type="application/javascript" src="words.js.php"></script>
 -->
-<script type="application/javascript" src="words.js"></script>
+<script type="application/javascript" src="words.javascript"></script>
 
 <script type="application/javascript" src="utils.javascript"></script>
 
