--- a/solve.html
+++ b/solve.html
@@ -11,13 +11,11 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 
 <!--
-<script type="application/javascript" src="words.js.php"></script>
+<script src="words.js.php"></script>
 -->
-<script type="application/javascript" src="words.javascript"></script>
-
-<script type="application/javascript" src="utils.javascript"></script>
-
-<script type="application/javascript">
+<script src="words.javascript"></script>
+<script src="utils.javascript"></script>
+<script>
 
 
 function solve(word_pattern, excluded_letters, last_vowel_given)
